deploy: f1e6b561ddc2f14f4e9086982f0c2ae45ef141d5

--- a/llm_post_training_en/index.html
+++ b/llm_post_training_en/index.html
@@ -495,7 +495,7 @@ We believe this modification can also be effective in domains beyond mathematics
 <h2 id="generalization-across-multiple-models-and-benchmarks">Generalization Across Multiple Models and Benchmarks</h2>
 
 <p>We further investigated whether our proposed continual post-training methodology consistently improves performance across a broader range of models and various benchmarks.
-To this end, we maintained the previous experimental setup and additionally evaluated two additional models: OpenThinker2-7B and AceReason-Nemetron-1.1-7B.
+To this end, we additionally evaluated two additional models: OpenThinker2-7B and AceReason-Nemetron-1.1-7B.
 We also extended our evaluation to a broader range of benchmarks: AIME25 and AMC23 for mathematical problem-solving skills, LiveCodeBench for code generation ability, GPQA-Diamond for general reasoning ability, and IFEval for instruction-following.
 We used the <a href="https://github.com/NovaSky-AI/SkyThought" target="_blank" rel="noopener noreferrer">SkyThought</a> framework for AIME25, AMC23, LiveCodeBench, and GPQA-Diamond, and the <a href="https://github.com/EleutherAI/lm-evaluation-harness" target="_blank" rel="noopener noreferrer">llm-evaluation-harness</a> for IFEval.</p>
 
