--- a/llm_post_training_en/index.html
+++ b/llm_post_training_en/index.html
@@ -22,7 +22,7 @@
     // getting stuff directly from Jekyll
     let publishedWhen = "July 28, 2025";
     let title = "[EN] Continual Post-Training of LLMs via Offline GRPO for Mathematical Reasoning";
-    let description = "In this post, we explore a new approach to enhancing the reasoning capabilities of LLMs through continual post-training. While pre-training equips LLMs with broad linguistic knowledge, it often falls short in complex reasoning tasks like math or code. Recent models have shown that Reinforcement Learning with Verifiable Rewards (RLVR) can help bridge this gap, but existing methods rely on slow and limited online training. We propose an offline alternative using teacher-generated trajectories and introduce a novel variant of Group Relative Policy Optimization (GRPO) that better captures high-quality reasoning traces—even when all outputs are positive. Our experiments on mathematical reasoning show that this method leads to consistent improvements.";
+    let description = "In this post, we explore a new approach to enhancing the reasoning capabilities of LLMs through continual post-training. While pre-training equips LLMs with broad linguistic knowledge, it often falls short in complex reasoning tasks like math or code. Recent models have shown that Reinforcement Learning with Verifiable Rewards (RLVR) can help bridge this gap, but existing methods rely on slow and limited online training. We propose an offline alternative using teacher-generated trajectories and introduce a novel variant of Group Relative Policy Optimization (GRPO) that better captures high-quality reasoning traces—even when all outputs are positive. Our experiments on mathematical reasoning show that this method leads to consistent improvements, and all trained model checkpoints and the source code have been publicly released.";
 
     {
       let authorsBibtex = authors.map(e => `${e[0]}, ${e[1]}`).join(" and ");
@@ -76,7 +76,7 @@ ${academicLFI}, "${title}", Blogposts, 2025.
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>[EN] Continual Post-Training of LLMs via Offline GRPO for Mathematical Reasoning | Krafton AI</title>
     <meta name="author" content="Krafton  Blog" />
-    <meta name="description" content="In this post, we explore a new approach to enhancing the reasoning capabilities of LLMs through continual post-training. While pre-training equips LLMs with broad linguistic knowledge, it often falls short in complex reasoning tasks like math or code. Recent models have shown that Reinforcement Learning with Verifiable Rewards (RLVR) can help bridge this gap, but existing methods rely on slow and limited online training. We propose an offline alternative using teacher-generated trajectories and introduce a novel variant of Group Relative Policy Optimization (GRPO) that better captures high-quality reasoning traces—even when all outputs are positive. Our experiments on mathematical reasoning show that this method leads to consistent improvements." />
+    <meta name="description" content="In this post, we explore a new approach to enhancing the reasoning capabilities of LLMs through continual post-training. While pre-training equips LLMs with broad linguistic knowledge, it often falls short in complex reasoning tasks like math or code. Recent models have shown that Reinforcement Learning with Verifiable Rewards (RLVR) can help bridge this gap, but existing methods rely on slow and limited online training. We propose an offline alternative using teacher-generated trajectories and introduce a novel variant of Group Relative Policy Optimization (GRPO) that better captures high-quality reasoning traces—even when all outputs are positive. Our experiments on mathematical reasoning show that this method leads to consistent improvements, and all trained model checkpoints and the source code have been publicly released." />
     <meta name="keywords" content="machine-learning, ml, deep-learning, reinforcement-learning, iclr" />
 
 
@@ -149,6 +149,9 @@ ${academicLFI}, "${title}", Blogposts, 2025.
 } a[href="https://huggingface.co/collections/KRAFTON/offline-grpo-6888396558def99dd878097c"] {
   color: #007bff !important;
   font-weight: bold;
+} a[href="https://github.com/krafton-ai/Offline-GRPO"] {
+  color: #007bff !important;
+  font-weight: bold;
 }
 
     </style>
@@ -157,7 +160,7 @@ ${academicLFI}, "${title}", Blogposts, 2025.
   <d-front-matter>
     <script async type="text/json">{
       "title": "[EN] Continual Post-Training of LLMs via Offline GRPO for Mathematical Reasoning",
-      "description": "In this post, we explore a new approach to enhancing the reasoning capabilities of LLMs through continual post-training. While pre-training equips LLMs with broad linguistic knowledge, it often falls short in complex reasoning tasks like math or code. Recent models have shown that Reinforcement Learning with Verifiable Rewards (RLVR) can help bridge this gap, but existing methods rely on slow and limited online training. We propose an offline alternative using teacher-generated trajectories and introduce a novel variant of Group Relative Policy Optimization (GRPO) that better captures high-quality reasoning traces—even when all outputs are positive. Our experiments on mathematical reasoning show that this method leads to consistent improvements.",
+      "description": "In this post, we explore a new approach to enhancing the reasoning capabilities of LLMs through continual post-training. While pre-training equips LLMs with broad linguistic knowledge, it often falls short in complex reasoning tasks like math or code. Recent models have shown that Reinforcement Learning with Verifiable Rewards (RLVR) can help bridge this gap, but existing methods rely on slow and limited online training. We propose an offline alternative using teacher-generated trajectories and introduce a novel variant of Group Relative Policy Optimization (GRPO) that better captures high-quality reasoning traces—even when all outputs are positive. Our experiments on mathematical reasoning show that this method leads to consistent improvements, and all trained model checkpoints and the source code have been publicly released.",
       "published": "July 28, 2025",
       "authors": [
         {
@@ -264,7 +267,7 @@ ${academicLFI}, "${title}", Blogposts, 2025.
 
       <d-title>
         <h1>[EN] Continual Post-Training of LLMs via Offline GRPO for Mathematical Reasoning</h1>
-        <p>In this post, we explore a new approach to enhancing the reasoning capabilities of LLMs through continual post-training. While pre-training equips LLMs with broad linguistic knowledge, it often falls short in complex reasoning tasks like math or code. Recent models have shown that Reinforcement Learning with Verifiable Rewards (RLVR) can help bridge this gap, but existing methods rely on slow and limited online training. We propose an offline alternative using teacher-generated trajectories and introduce a novel variant of Group Relative Policy Optimization (GRPO) that better captures high-quality reasoning traces—even when all outputs are positive. Our experiments on mathematical reasoning show that this method leads to consistent improvements.</p>
+        <p>In this post, we explore a new approach to enhancing the reasoning capabilities of LLMs through continual post-training. While pre-training equips LLMs with broad linguistic knowledge, it often falls short in complex reasoning tasks like math or code. Recent models have shown that Reinforcement Learning with Verifiable Rewards (RLVR) can help bridge this gap, but existing methods rely on slow and limited online training. We propose an offline alternative using teacher-generated trajectories and introduce a novel variant of Group Relative Policy Optimization (GRPO) that better captures high-quality reasoning traces—even when all outputs are positive. Our experiments on mathematical reasoning show that this method leads to consistent improvements, and all trained model checkpoints and the source code have been publicly released.</p>
       </d-title>
 
       <d-byline></d-byline>
@@ -578,7 +581,7 @@ These results indicate an absence of any catastrophic forgetting during the cont
 <p>Additionally, offline GRPO is highly efficient as it recycles the teacher model’s trajectories without direct rollout during the training process. 
 We therefore achieved performance comparable to or better than existing reinforcement learning methods while significantly reducing computational cost.
 Being compute-efficient yet strong in performance, we believe that our proposed continual post-training methodology is attractive to many practitioners, and expect it to be useful across various domains and applications.
-Finally, we have publicly released all the evaluated models on <a href="https://huggingface.co/collections/KRAFTON/offline-grpo-6888396558def99dd878097c" target="_blank" rel="noopener noreferrer">HuggingFace</a> to contribute to the open-source community and to make our results reproducible.</p>
+Finally, to contribute to the open-source community and ensure reproducibility, we have publicly released all the evaluated models on <a href="https://huggingface.co/collections/KRAFTON/offline-grpo-6888396558def99dd878097c" target="_blank" rel="noopener noreferrer">HuggingFace</a> and source code on <a href="https://github.com/krafton-ai/Offline-GRPO" target="_blank" rel="noopener noreferrer">GitHub</a>.</p>
 
       </d-article>
 
